fix(dimmer): content in inverted dimmer was still white thus unreadable

--- a/src/definitions/modules/dimmer.less
+++ b/src/definitions/modules/dimmer.less
@@ -208,6 +208,7 @@ body.dimmable > .dimmer {
 .ui.inverted.dimmer {
   background-color: @invertedBackgroundColor;
 }
+.ui.inverted.dimmer > .content,
 .ui.inverted.dimmer > .content > * {
   color: @invertedTextColor;
 }
